--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -4,7 +4,8 @@
 $color1: #8f4f4f;
 $color2: #9c7575;
 $color3: #d4b4b4;
-$principal_background_color: white;
+$color4: #e2d1d1;
+$color5: #6e3333;
 
 //tipografia
 
